# prog3

./: .gitignore  TODO.md
LR1/: README.md
LR1/cpp/: CMakeLists.txt  README.md
LR1/cpp/include/1/: Array.hpp  ArrayCLI.hpp
LR1/cpp/include/a/: Array.hpp
LR1/cpp/include/b/: LinkedList.hpp
LR1/cpp/include/c/: DoublyLinkedList.hpp
LR1/cpp/include/d/: Stack.hpp
LR1/cpp/include/e/: Queue.hpp
LR1/cpp/include/f/: RedBlackTree.hpp
LR1/cpp/src/: main.cpp
LR1/cpp/src/a/: Array.cpp  ArrayCLI.cpp
LR1/cpp/src/b/: LinkedList.cpp  LinkedListCLI.cpp
LR1/cpp/src/c/: DoublyLinkedList.cpp  DoublyLinkedListCLI.cpp
LR1/cpp/src/d/: Stack.cpp  StackCLI.cpp
LR1/cpp/src/e/: Queue.cpp  QueueCLI.cpp
LR1/cpp/src/f/: RedBlackTree.cpp  RedBlackTreeCLI.cpp
LR1/cpp/tests/a/: ArrayTests.cpp
LR1/cpp/tests/b/: LinkedListTests.cpp
LR1/cpp/tests/c/: DoublyLinkedListTests.cpp
LR1/cpp/tests/d/: StackTests.cpp
LR1/cpp/tests/e/: QueueTests.cpp
LR1/cpp/tests/f/: RedBlackTreeTests.cpp
LR1/cpp/text-big-o/: Array.md  DoublyLinkedList.md  LinkedList.md  Queue.md  RedBlackTree.md  Stack.md
LR1/rust/: Cargo.toml
LR1/rust/src/: main.rs
LR1/rust/src/a/: Array.rs  mod.rs
LR1/rust/src/b/: LinkedList.rs  mod.rs
LR1/rust/src/c/: DoublyLinkedList.rs  mod.rs
LR1/rust/src/d/: Stack.rs  mod.rs
LR1/rust/src/e/: Queue.rs  mod.rs
LR1/rust/tests/a/: ArrayTests.rs
LR1/rust/tests/b/: LinkedListTests.rs
LR1/rust/tests/c/: DoublyLinkedList.rs
LR1/rust/tests/d/: StackTests.rs
LR1/rust/tests/e/: QueueTests.rs
LR2/: .clang-format  CMakeLists.txt
LR2/include/1/: Evaluator.hpp  Stack.hpp  Token.hpp
LR2/include/2/: Set.hpp
LR2/include/3/: Genome.hpp
LR2/include/4/: Accents.hpp  Array.hpp
LR2/include/5/: Huffman.hpp
LR2/include/6/: HashTable.hpp  HashTableChains.hpp  HashTableOpen.hpp
LR2/include/7/: LruCache.hpp
LR2/src/: main.cpp
LR2/src/1/: CLI.cpp  Evaluator.cpp  Stack.cpp
LR2/src/2/: CLI.cpp  Set.cpp
LR2/src/3/: CLI.cpp  Genome.cpp
LR2/src/4/: Accents.cpp  CLI.cpp
LR2/src/5/: CLI.cpp  Huffman.cpp
LR2/src/6/: CLI.cpp  HashTable.cpp  HashTableChains.cpp  HashTableOpen.cpp
LR2/src/7/: CLI.cpp  LruCache.cpp
LR2/test/: CMakeLists.txt  test_main.cpp
LR2/test/1/: EvaluatorTests.cpp
LR2/test/2/: SetTests.cpp
LR2/test/3/: GenomeTests.cpp
LR2/test/4/: AccentTests.cpp
LR2/test/5/: HuffmanTests.cpp
LR2/test/6/: HashTableTests.cpp
LR2/test/7/: LruTests.cpp
lab3/src/cpp/: CMakeLists.txt  Formatting.cmake  demo.sh
lab3/src/cpp/include/: CLI.hpp  array.hpp  binary_serialization.hpp  cbtree.hpp  common.hpp  doubly_list.hpp  hashtable.hpp  queue.hpp  singly_list.hpp  stack.hpp
lab3/src/cpp/src/: CLI.cpp  array.cpp  binary_serialization.cpp  cbtree.cpp  doubly_list.cpp  hashtable.cpp  main.cpp  queue.cpp  singly_list.cpp  stack.cpp
lab3/src/cpp/tests/: test_array.cpp  test_cbtree.cpp  test_doubly_list.cpp  test_hashtable.cpp  test_queue.cpp  test_singly_list.cpp  test_stack.cpp
lab3/src/go/: app  coverage.html  go.mod
lab3/src/go/cmd/: main.go
lab3/src/go/internal/: array.go  array_test.go  binary.go  binary_test.go  cbtree.go  cbtree_test.go  cli.go  doubly_list.go  doubly_list_test.go  hashtable.go  hashtable_test.go  queue.go  queue_test.go  singly_list.go  singly_list_test.go  stack.go  stack_test.go
lab4/: .clang-format  CMakeLists.txt  Formatting.cmake
lab4/include/: concurrency_stress.hpp  exam_analyzer.hpp  fork_dilemma.hpp  thread_locks.hpp  timer_utils.hpp
lab4/src/: concurrency_stress.cpp  exam_analyzer.cpp  fork_dilemma.cpp  main.cpp  thread_locks.cpp  timer_utils.cpp
lab5/: .clang-format  CMakeLists.txt  Formatting.cmake
lab5/include/: carnivore.hpp  creature.hpp  ecosystem.hpp  herbivore.hpp
lab5/src/: carnivore.cpp  creature.cpp  ecosystem.cpp  herbivore.cpp  main.cpp
lab6/: CMakeLists.txt
lab6/cmake/: Dependencies.cmake  Formatting.cmake  Tests.cmake
lab6/libs/db/: CMakeLists.txt
lab6/libs/db/include/db/: db_manager.hpp  sql_loader.hpp
lab6/libs/db/src/: db_manager.cpp
lab6/libs/models/: CMakeLists.txt
lab6/libs/models/include/models/: entities.hpp
lab6/scripts/: build.sh
lab6/sql/: analytics.sql  get_conflicting_results.sql  get_files_by_type.sql  get_malware_stats.sql  get_top_models.sql  init.sql  injection_test.sql  schema.sql
lab6/src/: CMakeLists.txt  main.cpp
lab6/tests/: CMakeLists.txt  db_tests.cpp
prac_db/: .clang-format  CMakeLists.txt  db.conf
prac_db/include/common/: config.hpp  defs.hpp
prac_db/include/db/buffer/: buffer_pool_manager.hpp  lru_replacer.hpp  replacer.hpp
prac_db/include/db/catalog/: column.hpp  schema.hpp  type.hpp
prac_db/include/db/storage/: disk_manager.hpp  page.hpp  slotted_page.hpp  table_heap.hpp  table_iterator.hpp  tuple.hpp
prac_db/src/: main.cpp
prac_db/src/common/: config.cpp
prac_db/src/db/buffer/: buffer_pool_manager.cpp  lru_replacer.cpp
prac_db/src/db/storage/: disk_manager.cpp  slotted_page.cpp  table_heap.cpp  table_iterator.cpp
prac_db/test/: CMakeLists.txt
prac_db/test/buffer/: buffer_pool_manager_test.cpp  lru_replacer_test.cpp
prac_db/test/storage/: disk_manager_test.cpp  slotted_page_test.cpp  table_heap_test.cpp
